Atualização do projeto.

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -33,7 +33,7 @@
     <!-- Cabecalho da página -->
      <header id="cabecalho">
         <span class="link">Sobre nós</span>
-        <h1 id="cabecalho-titulo">Por que somos difrentes?</h1>
+        <h1 id="cabecalho-titulo">Por que somos diferentes?</h1>
         <div id="cabecalho-container-descricao">
             <p id="cabecalho-descricao">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
         </div>
@@ -72,8 +72,8 @@
     <main id="vagas">
         <article id="vagas-talentos">
             <span class="link">Vagas abertas!</span>
-            <h1>Estamos procurando por talentos</h1>
-            <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+            <h1 id="vagas-titulo">Estamos procurando por talentos</h1>
+            <p id="vagas-descricao">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
             <picture>
                 <img src="img/vagas.png" alt="Equipe">
             </picture>
@@ -93,6 +93,7 @@
                     </li>
                 </ul>
             </li>
+            <a href="https://site-web-html-css.vercel.app/" target="_blank">site-web-html-css.vercel.app/</a>
 
             <li>
                 <h1>Desenvolvimento de Software</h1>
